# chatterbox-uv

./: multilingual_app.py  pyproject.toml
src/chatterbox/: __init__.py
src/chatterbox/models/t3/: llama_configs.py
