[project]
name = "chatterbox"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "resemble-ai", email = "engineering@resemble.ai" }]
dependencies = [
  "conformer>=0.3.2",
  "diffusers>=0.35.1",
  "gradio>=5.45.0",
  "librosa>=0.11.0",
  "numpy>=2.2.6",
  "peft>=0.17.1",
  "resemble-perth>=1.0.1",
  "s3tokenizer>=0.2.0",
  "safetensors>=0.6.2",
  "torch>=2.8.0",
  "transformers>=4.56.1",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
